# breakable_toy

./: .clang-format  .gitignore  .gitmodules  README.md
breakable_toy/: CMakeLists.txt  CMakePresets.json
breakable_toy/lib/bt/: CMakeLists.txt
breakable_toy/lib/bt/include/bt/: welcome.hpp
breakable_toy/lib/bt/src/: CMakeLists.txt  welcome.cpp
breakable_toy/lib/bt/test/: CMakeLists.txt  welcome.test.cpp
breakable_toy/shaders/: simple_shader.frag.glsl  simple_shader.vert.glsl
breakable_toy/src/: CMakeLists.txt  app.cpp  app.hpp  bt_device.cpp  bt_device.hpp  bt_filesystem.cpp  bt_filesystem.hpp  bt_logger.cpp  bt_logger.hpp  bt_maths.hpp  bt_model.cpp  bt_model.hpp  bt_pipeline.cpp  bt_pipeline.hpp  bt_swapchain.cpp  bt_swapchain.hpp  bt_window.cpp  bt_window.hpp  main.cpp
tools/: compile_shaders.sh
